--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>JS course!</h3>
+    <h3 id="h3">JS course!</h3>
+    <button id="btn" onclick="eve()">clik!</button>
+    <h3 id="result"></h3>
+    age : <input id="input" type="number">
+    <input onclick="chg()" id="submit" type="submit">
+    <br>
     <script src="script.js"></script>
 </body>
 </html>
