--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     age : <input id="input" type="number">
     <input onclick="chg()" id="submit" type="submit">
     <br>
+    <button onclick="this.innerHTML = Date()">Date</button>
     <script src="script.js"></script>
 </body>
 </html>
