--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3 id="h3">JS course!</h3>
+    <!-- <h3 id="h3">JS course!</h3>
     <button id="btn" onclick="eve()">clik!</button>
     <h3 id="result"></h3>
     age : <input id="input" type="number">
     <input onclick="chg()" id="submit" type="submit">
     <br>
-    <button onclick="this.innerHTML = Date()">Date</button>
+    <button onclick="this.innerHTML = Date()">Date</button> -->
+    <!-- <button>click here</button> -->
+    <img src="imgs/sta-je-html.jpg" alt="html">
+    <!-- <img src="imgs/sta-je-css.png" alt="">
+    <img src="imgs/front.jpg" alt=""> -->
+    <div id="btns"> 
+        <button id="btn1">pre</button>
+        <button id="btn2">next</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
