--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <br>
     <button onclick="this.innerHTML = Date()">Date</button> -->
     <!-- <button>click here</button> -->
-    <img src="imgs/sta-je-html.jpg" alt="html">
-    <!-- <img src="imgs/sta-je-css.png" alt="">
-    <img src="imgs/front.jpg" alt=""> -->
+    <!-- <img src="imgs/sta-je-html.jpg" alt="html">
     <div id="btns"> 
         <button id="btn1">pre</button>
         <button id="btn2">next</button>
-    </div>
+    </div> -->
+
+    <h1>Welcome User</h1>
+
     <script src="script.js"></script>
 </body>
 </html>
