--- a/index.html
+++ b/index.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn JavaScript</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- <h3 id="h3">JS course!</h3>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Learn JavaScript</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <!-- <h3 id="h3">JS course!</h3>
     <button id="btn" onclick="eve()">clik!</button>
     <h3 id="result"></h3>
     age : <input id="input" type="number">
     <input onclick="chg()" id="submit" type="submit">
     <br>
     <button onclick="this.innerHTML = Date()">Date</button> -->
-    <!-- <button>click here</button> -->
-    <!-- <img src="imgs/sta-je-html.jpg" alt="html">
+        <!-- <button>click here</button> -->
+        <!-- <img src="imgs/sta-je-html.jpg" alt="html">
     <div id="btns"> 
         <button id="btn1">pre</button>
         <button id="btn2">next</button>
     </div> -->
 
-    <h1>Welcome User</h1>
+        <h1>Welcome User</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga
+            vero iusto vitae beatae illum nostrum, ad odio tempore fugit!
+            Possimus delectus iste debitis reiciendis maiores cupiditate?
+            Beatae, tempore praesentium!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut
+            incidunt esse minima perferendis. Doloremque id temporibus quos iure
+            eos iste nulla. Laudantium reiciendis quisquam voluptatum aliquid
+            optio tempora perspiciatis est.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, iure
+            sunt. Maxime quibusdam libero eos iusto voluptatum eligendi sequi
+            sint sunt aut, repudiandae, ex repellat labore? Nisi atque est
+            laborum!</p>
+        <div class="links">
+            <a href="#">Link1</a>
+            <a href="#">Link2</a>
+            <a href="#">Link3</a>
+        </div>
 
-    <script src="script.js"></script>
-</body>
+        <ul>
+            <li>iflifhligh</li>
+            <li>dfjfjy</li>
+            <li>423637758</li>
+            <li>hrvdrtjtykuluiluildfs</li>
+        </ul>
+        <script src="script.js"></script>
+    </body>
 </html>
