--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button id="btn2">next</button>
     </div> -->
 
-        <h1>Welcome User</h1>
+        <!-- <h1>Welcome User</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga
             vero iusto vitae beatae illum nostrum, ad odio tempore fugit!
             Possimus delectus iste debitis reiciendis maiores cupiditate?
@@ -45,7 +45,10 @@
             <li>dfjfjy</li>
             <li>423637758</li>
             <li>hrvdrtjtykuluiluildfs</li>
-        </ul>
+        </ul> -->
+        
+        <img id="chrome" src="imgs/chrome.png" alt="chrome">
+        <button>Click here!</button>
         <script src="script.js"></script>
     </body>
 </html>
