--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             <li>hrvdrtjtykuluiluildfs</li>
         </ul> -->
         
-        <img id="chrome" src="imgs/chrome.png" alt="chrome">
+        <!-- <img id="chrome" src="imgs/chrome.png" alt="chrome"> -->
+        <input type="text">
         <button>Click here!</button>
+        
         <script src="script.js"></script>
     </body>
 </html>
