--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
         </ul> -->
         
         <!-- <img id="chrome" src="imgs/chrome.png" alt="chrome"> -->
-        <input type="text">
-        <button>Click here!</button>
-        
+        <!-- <input type="text"> -->
+        <button>Click here!</button><br><br>
+        <button id="open">Open</button>
+        <button id="close">Close</button>
+        <button id="assign">Assign</button><br><br>
+        <button id="Pre">Previous</button>
+        <button id="next">Next</button>
+
         <script src="script.js"></script>
     </body>
 </html>
