--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Learn JavaScript</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body><p>hi</p>
         <!-- <h3 id="h3">JS course!</h3>
     <button id="btn" onclick="eve()">clik!</button>
     <h3 id="result"></h3>
@@ -49,12 +49,17 @@
         
         <!-- <img id="chrome" src="imgs/chrome.png" alt="chrome"> -->
         <!-- <input type="text"> -->
-        <button>Click here!</button><br><br>
-        <button id="open">Open</button>
+        <!-- <button id="open">Open</button>
         <button id="close">Close</button>
-        <button id="assign">Assign</button><br><br>
+        <button id="assign">Assign</button><br><br> -->
         <button id="Pre">Previous</button>
-        <button id="next">Next</button>
+        <button id="next">Next</button><br><br>
+        <ul>
+            <li>12elq4</li>
+            <li>xmm324</li>
+            <li>sds34f</li>
+        </ul>
+        <button>Click here!</button><br><br>
 
         <script src="script.js"></script>
     </body>
