--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Learn JavaScript</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body><p>hi</p>
+    <body>
         <!-- <h3 id="h3">JS course!</h3>
     <button id="btn" onclick="eve()">clik!</button>
     <h3 id="result"></h3>
@@ -52,14 +52,22 @@
         <!-- <button id="open">Open</button>
         <button id="close">Close</button>
         <button id="assign">Assign</button><br><br> -->
-        <button id="Pre">Previous</button>
+        <!-- <button id="Pre">Previous</button>
         <button id="next">Next</button><br><br>
         <ul>
             <li>12elq4</li>
             <li>xmm324</li>
             <li>sds34f</li>
         </ul>
-        <button>Click here!</button><br><br>
+        <button>Click here!</button><br><br> -->
+
+        <!-- <button>Click here!</button><br><br>
+        <label for="name">Name : </label>
+        <input type="text" id="name" onchange="changIt(this) " onfocus="focus(this)"> 
+        <div class="box1" onmouseover="mouseOver(this)" onmouseout="mouseOut(this)" onclick="clickBox(this)">Mouse over me</div>
+        <div class="box1" ondblclick="dblClick(this)" onmouseout="mouseOut2(this)">click me</div> -->
+
+        <!-- <p></p> -->
 
         <script src="script.js"></script>
     </body>
