--- a/content-placeholder/index.html
+++ b/content-placeholder/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-header animated" id="header">&nbsp;</div>
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
 
       <div class="card-content">
         <h3 class="card-title animated-bg animated-bg-text" id="title">
