--- a/website/index.html
+++ b/website/index.html
@@ -1,18 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/responsive.css">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-    
-    <div class=""></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Website</title>
+        <!--=============== google font ===============-->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap"
+            rel="stylesheet" />
+        <!--=============== CSS ===============-->
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/responsive.css">
+        <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+            integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    </head>
 
-    <script src="scripts/script.js"></script>
-</body>
+    <body class="light-theme">
+
+        <header>
+            <div class="container">
+                <nav>
+
+                    <a href="/" class="logo">Navid <span>DEV</span></a>
+
+                    <div class="btn-group">
+                        <button class="theme-btn theme-btn-mobile light">
+                            <i class="fa-solid fa-moon moon"></i>
+                            <i class="fa-solid fa-sun sun"></i>
+                        </button>
+
+                        <button class="nav-menu-btn">
+                            <i class="fa-solid fa-bars"></i>
+                        </button>
+                    </div>
+
+                    <div class="flex-wrapper">
+                        <ul class="desktop-nav">
+                            <li>
+                                <a href="#" class="nav-link">Home</a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link">About Me</a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link">Contact</a>
+                            </li>
+                        </ul>
+
+                        <button class="theme-btn theme-btn-desktop light">
+                            <i class="fa-solid fa-moon"></i>
+                            <i class="fa-solid fa-sun"></i>
+                        </button>
+                    </div>
+
+                    <div class="mobile-nav">
+                        <button class="nav-close-btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </button>
+
+                        <div class="wrapper">
+                            <p class="h3 nav-title">Main Menu</p>
+                            <ul>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">About Me</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <p class="h3 nav-title">Topics</p>
+                            <ul>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">Database</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">Accessibility</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">Web Performance</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+
+        <script src="scripts/script.js"></script>
+
+    </body>
+
 </html>
