--- a/website/index.html
+++ b/website/index.html
@@ -85,10 +85,12 @@
                                     <a href="#" class="nav-link">Database</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">Accessibility</a>
+                                    <a href="#"
+                                        class="nav-link">Accessibility</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">Web Performance</a>
+                                    <a href="#" class="nav-link">Web
+                                        Performance</a>
                                 </li>
                             </ul>
                         </div>
@@ -96,6 +98,32 @@
                 </nav>
             </div>
         </header>
+
+        <main>
+            <div class="hero">
+                <div class="container">
+                    <div class="left">
+                        <h1 class="h1">Hi, I'm <b>Shaghayegh Dev</b>. <br />Web
+                            Developer</h1>
+                        <p class="h3">Specialized in Front End Development</p>
+                        <div class="btn-group">
+                            <a href="#" class="btn btn-primary">Contact Me</a>
+                            <a href="#" class="btn btn-secondary">About Me</a>
+                        </div>
+                    </div>
+
+                    <div class="right">
+                        <div class="pattern-bg"></div>
+                        <div class="img-box">
+                            <img src="./assets/about.jpg" alt="about"
+                                class="hero-img" />
+                            <div class="shape shape-1"></div>
+                            <div class="shape shape-2"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
 
         <script src="scripts/script.js"></script>
 
