--- a/Alibaba/index.html
+++ b/Alibaba/index.html
@@ -24,15 +24,15 @@
             </div>
         </div>
 
-        <div class="header-navbar">
+        <div class="header-navbar flex-row">
             <ul class="header-navbar-items flex-row">
-                <li class="header-navbar-item">
+                <li class="header-navbar-item header-navbar-item1 positionRel">
                     <a href="#" class="header-navbar-link">
                         <i class="fa-solid fa-chevron-down"></i>
                         <span>پرواز</span>
                     </a>
                     <div class="parvaz-menu">
-                        <ul class="menu-box">
+                        <ul class="menu-box border">
                             <li class="menu-item">
                                 <a href="#" class="menu-link">پرواز داخلی</a>
                             </li>
@@ -73,17 +73,17 @@
                     </a>
                 </li>
 
-                <li class="hc-navbar-item" style="border: none;">
+                <li class="header-navbar-item positionRel header-navbar-item7">
                     <a href="#" class="header-navbar-link">
                         <i class="fa-solid fa-chevron-down"></i>
                         <span>بیشتر</span>
                     </a>
                     <div class="more">
-                        <ul class="menu-box">
+                        <ul class="menu-box border">
                             <li class="menu-item">
                                 <a href=" #" class="menu-link ">علی بابا پلاس</a>
                             </li>
-                            <li class="parvaz-d-menu-item ">
+                            <li class="menu-item ">
                                 <a href="#" class="menu-link ">مجله علی‌بابا</a>
                             </li>
                         </ul>
@@ -92,8 +92,8 @@
             </ul>
         </div>
 
-        <div class="header-right ">
-            <div class="logo">
+        <div class="header-right flex-row">
+            <div class="logo flex-row1">
                 <img src="assets/images/logo.png" alt="logo" width="50">
                 <div class="link">
                     <strong>alibaba.ir</strong>
@@ -103,6 +103,6 @@
         </div>
     </header>
 
-    <link rel="stylesheet" href="scripts/script.js">
+    <script src="scripts/script.js"></script>
 </body>
 </html>
